# Magnetar

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  HACKING.md  IDEAS  LICENSE  MagnetarCraft.sln  README.md
MagnetarCraft/: CMakeLists.txt  MPQDraftPlugin.h  MagnetarCraft.cpp  MagnetarCraft.vcxproj  MagnetarCraft.vcxproj.filters  README.md  starcraft.cpp  starcraft.h  starcraft_exe.cpp  starcraft_exe.h  starcraft_exe_types.h
MagnetarCraft/include/: CBullet.h  CFlingy.h  CSprite.h  MagnetarCraft.h  campaign.h  credits.h  exception.h  file_info.h  glu_campaign.h  glu_campaign_exp.h  glu_chat.h  glu_connect.h  glu_custom.h  glu_join.h  glu_load.h  glu_login.h  glu_main.h  glu_ready_room.h  glu_score.h  glu_title.h  iscript.h  iscript_parser.h  minimap.h  patching.h  race.h  starcraft.h  starcraft_executable.h  tbl_file.h  video.h  warcraft2.h
MagnetarCraft/include/lua/: trigger_action_state.h
MagnetarCraft/include/patching/: BasePatch.h  CallSitePatch.h  FailStubPatch.h  FunctionPatch.h  MemoryPatch.h  NopPatch.h
MagnetarCraft/include/starcraft_exe/: offsets.h  types.h
MagnetarCraft/include/warcraft2_exe/: offsets.h  types.h
MagnetarCraft/patching/: AddressPatch.cpp  AddressPatch.h  BasePatch.cpp  BasePatch.h  CallSitePatch.cpp  CallSitePatch.h  FailStubPatch.cpp  FailStubPatch.h  FunctionPatch.cpp  FunctionPatch.h  MemoryPatch.cpp  MemoryPatch.h  NopPatch.cpp  NopPatch.h  patching.h
MagnetarCraft/src/: CBullet.cpp  CFlingy.cpp  CMakeLists.txt  CSprite.cpp  MagnetarCraft.cpp  campaign.cpp  credits.cpp  file_info.cpp  glu_campaign.cpp  glu_campaign_exp.cpp  glu_chat.cpp  glu_connect.cpp  glu_custom.cpp  glu_join.cpp  glu_load.cpp  glu_login.cpp  glu_main.cpp  glu_ready_room.cpp  glu_score.cpp  glu_title.cpp  iscript.cpp  iscript_parser.cpp  main.cpp  main.rc  minimap.cpp  race.cpp  starcraft.cpp  starcraft_executable.cpp  video.cpp  warcraft2.cpp
MagnetarCraft/src/lua/: trigger_action_state.cpp
MagnetarCraft/src/patching/: BasePatch.cpp  CallSitePatch.cpp  FailStubPatch.cpp  FunctionPatch.cpp  NopPatch.cpp
MagnetarCraft/src/starcraft_exe/: offsets.cpp
MagnetarCraft/src/warcraft2_exe/: offsets.cpp
MagnetarCraft/starcraft_exe/: offsets.cpp  offsets.h  types.h
MagnetarCraft/test/: CMakeLists.txt  tests.cpp
MagnetarDat/: CMakeLists.txt
MagnetarDat/Tileset/: ashworld.vr4  ice.vr4  spacerock.cv5  spacerock.grp  spacerock.vf4  spacerock.vr4  spacerock.vx4
MagnetarDat/arr/: mapdata.tbl
MagnetarDat/campaign/terranSW/terran01/staredit/: scenario.chk
MagnetarDat/campaign/terranSW/terran02/staredit/: scenario.chk
MagnetarDat/campaign/terranSW/terran03/staredit/: scenario.chk
MagnetarDat/campaign/terranSW/terran04/staredit/: scenario.chk
MagnetarDat/campaign/terranSW/terran05/staredit/: scenario.chk
MagnetarDat/campaign/terranSW/tutorial/staredit/: scenario.chk
MagnetarDat/compressor/: compressor.cpp
MagnetarDat/rez/: crdt_mag.txt  epilogsw.txt  estt01sw.txt  estt02sw.txt  estt03sw.txt  estt04sw.txt  estt05sw.txt  estt0tsw.txt  races.tbl  tilesets.tbl
MagnetarDat/scripts/: iscript.txt
Magnetorm/: CMakeLists.txt  Magnetorm.def  Magnetorm.vcxproj  README.md  dllmain.cpp  magnetorm.cpp  magnetorm.h
Magnetorm/StormNamedSymbols/: CMakeLists.txt  storm.def
Magnetorm/include/: magnetorm.h
MagntarCraft/: AddressPatch.cpp  AddressPatch.h  MagnetarCraft.cpp  MagntarCraft.vcxproj  README.md  starcraft.cpp  starcraft.h  starcraft_exe.cpp  starcraft_exe.h  starcraft_exe_types.h
MagntarCraft/patching/: BasePatch.cpp  CallSitePatch.cpp  CallSitePatch.h  MemoryPatch.h  NopPatch.cpp  NopPatch.h
MpqBuilder/: CMakeLists.txt  main.cpp
Storm/: CMakeLists.txt  README.md  Storm.vcxproj
StormNamedSymbols/: storm.cpp  storm.def
idb-export/: README.md  idb-export.py
tools/: decompile-iscript.py
